first stack of changes in notebook 01

--- a/notebooks/01-training-tokenizers.ipynb
+++ b/notebooks/01-training-tokenizers.ipynb
@@ -99,9 +99,9 @@
    "source": [
     "Alright, now we are ready to implement our first tokenization pipeline through `tokenizers`. \n",
     "\n",
-    "For this, we will train a Byte-Pair Encoding (BPE) tokenizer on a quite small input for the purpose of this notebook.\n",
-    "We will work with [the file from Peter Norving](https://www.google.com/url?sa=t&rct=j&q=&esrc=s&source=web&cd=1&cad=rja&uact=8&ved=2ahUKEwjYp9Ppru_nAhUBzIUKHfbUAG8QFjAAegQIBhAB&url=https%3A%2F%2Fnorvig.com%2Fbig.txt&usg=AOvVaw2ed9iwhcP1RKUiEROs15Dz).\n",
-    "This file contains around 130.000 lines of raw text that will be processed by the library to generate a working tokenizer.\n"
+    "For this, we will train a Byte-Pair Encoding (BPE) tokenizer on a quite small input for the purpose of this notebook. You can train your tokenizer from a [Dataset](https://huggingface.co/docs/datasets/package_reference/main_classes.html#dataset) instance or from text files. We will see together the first method.\n",
+    "\n",
+    "For this example, we propose to use \"wikitext-2-raw-v1\" from [Wikitext dataset](https://huggingface.co/datasets/wikitext) which contains only 4.50 MB of text, but you can of course use a much larger dataset to train your tokenizer! "
    ]
   },
   {
@@ -111,11 +111,12 @@
     "pycharm": {
      "is_executing": false,
      "name": "#%% code\n"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "!pip install tokenizers"
+    "!pip install tokenizers datasets"
    ]
   },
   {
@@ -127,19 +128,26 @@
      "name": "#%% code\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Reusing dataset wikitext (/home/lucile/.cache/huggingface/datasets/wikitext/wikitext-2-raw-v1/1.0.0/aa5e094000ec7afeb74c3be92c88313cd6f132d564c7effd961c10fd47c76f20)\n"
+     ]
+    }
+   ],
    "source": [
-    "BIG_FILE_URL = 'https://raw.githubusercontent.com/dscape/spell/master/test/resources/big.txt'\n",
+    "from datasets import load_dataset\n",
     "\n",
-    "# Let's download the file and save it somewhere\n",
-    "from requests import get\n",
-    "with open('big.txt', 'wb') as big_f:\n",
-    "    response = get(BIG_FILE_URL, )\n",
-    "    \n",
-    "    if response.status_code == 200:\n",
-    "        big_f.write(response.content)\n",
-    "    else:\n",
-    "        print(\"Unable to get the file: {}\".format(response.reason))\n"
+    "# Initialize a dataset\n",
+    "dataset = load_dataset(\"wikitext\", name=\"wikitext-2-raw-v1\", split=\"train\")\n",
+    "\n",
+    "# Build an iterator over this dataset\n",
+    "def batch_iterator():\n",
+    "    batch_length = 1000\n",
+    "    for i in range(0, len(dataset), batch_length):\n",
+    "        yield dataset[i : i + batch_length][\"text\"]"
    ]
   },
   {
@@ -151,14 +159,79 @@
     }
    },
    "source": [
-    " \n",
-    "Now that we have our training data we need to create the overall pipeline for the tokenizer\n",
-    " "
+    "Now that we have our training data we need to create the overall pipeline for the tokenizer. For this we have two options: \n",
+    "- Solution 1: use one of the high-level classes encapsulating the overall pipeline for various well-known tokenization algorithm. The available tokenizers are listed [here](https://github.com/huggingface/tokenizers/tree/master/bindings/python/py_src/tokenizers/implementations).\n",
+    "- Solution 2: if you want to do something more custom, you can define the tokenizer yourself.\n",
+    "\n",
+    "For both cases, the pipeline will be the same. It will be necessary first to instantiate a tokenizer architecture before training it.\n",
+    "\n",
+    "We will see here how to create a Byte-level BPE tokenizer as introduced by OpenAI with their GPT-2 model with the 2 methods and train them on the dataset loaded above."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set training parameter\n",
+    "\n",
+    "# the size of our tokens vocabulary\n",
+    "vocab_size = 25000\n",
+    "\n",
+    "# the list of special tokens to have into our vocabulary. Several models use special tokens to mark the beginning of a sentence, the end of a sentence or to pad a sequence of tokens to a certain length. These special tokens must also belong to the vocabulary.\n",
+    "special_tokens = [\"<|endoftext|>\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Solution 1: Use a tokenization pipeline already implemented"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from tokenizers import ByteLevelBPETokenizer\n",
+    "\n",
+    "# Initialize a not train tokenizer\n",
+    "tokenizer_1 = ByteLevelBPETokenizer(unicode_normalizer=\"nfkc\", lowercase=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Trained vocab size: 25000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Train it\n",
+    "tokenizer_1.train_from_iterator(batch_iterator(), vocab_size=vocab_size, special_tokens=special_tokens)\n",
+    "\n",
+    "print(\"Trained vocab size: {}\".format(tokenizer.get_vocab_size()))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Solution 2: Define everything yourself"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -167,10 +240,6 @@
    },
    "outputs": [],
    "source": [
-    "# For the user's convenience `tokenizers` provides some very high-level classes encapsulating\n",
-    "# the overall pipeline for various well-known tokenization algorithm. \n",
-    "# Everything described below can be replaced by the ByteLevelBPETokenizer class. \n",
-    "\n",
     "from tokenizers import Tokenizer\n",
     "from tokenizers.decoders import ByteLevel as ByteLevelDecoder\n",
     "from tokenizers.models import BPE\n",
@@ -183,10 +252,7 @@
     "# Then we enable lower-casing and unicode-normalization\n",
     "# The Sequence normalizer allows us to combine multiple Normalizer that will be\n",
     "# executed in order.\n",
-    "tokenizer.normalizer = Sequence([\n",
-    "    NFKC(),\n",
-    "    Lowercase()\n",
-    "])\n",
+    "tokenizer.normalizer = Sequence([NFKC(), Lowercase()])\n",
     "\n",
     "# Our tokenizer also needs a pre-tokenizer responsible for converting the input to a ByteLevel representation.\n",
     "tokenizer.pre_tokenizer = ByteLevel()\n",
@@ -196,19 +262,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "The overall pipeline is now ready to be trained on the corpus we downloaded earlier in this notebook."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -228,8 +283,10 @@
     "from tokenizers.trainers import BpeTrainer\n",
     "\n",
     "# We initialize our trainer, giving him the details about the vocabulary we want to generate\n",
-    "trainer = BpeTrainer(vocab_size=25000, show_progress=True, initial_alphabet=ByteLevel.alphabet())\n",
-    "tokenizer.train(files=[\"big.txt\"], trainer=trainer)\n",
+    "trainer = BpeTrainer(\n",
+    "    vocab_size=vocab_size, show_progress=True, initial_alphabet=ByteLevel.alphabet(), special_tokens=special_tokens\n",
+    ")\n",
+    "tokenizer.train_from_iterator(batch_iterator(), trainer=trainer)\n",
     "\n",
     "print(\"Trained vocab size: {}\".format(tokenizer.get_vocab_size()))"
    ]
@@ -243,36 +300,7 @@
    },
    "source": [
     "Et voilà ! You trained your very first tokenizer from scratch using `tokenizers`. Of course, this \n",
-    "covers only the basics, and you may want to have a look at the `add_special_tokens` or `special_tokens` parameters\n",
-    "on the `Trainer` class, but the overall process should be very similar.\n",
-    "\n",
-    "We can save the content of the model to reuse it later."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {
-    "pycharm": {
-     "is_executing": false,
-     "name": "#%% code\n"
-    }
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['./vocab.json', './merges.txt']"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# You will see the generated files in the output.\n",
-    "tokenizer.model.save('.')"
+    "covers only the basics, and you may want to have a look at the documentation to customize your tokenizer."
    ]
   },
   {
@@ -283,12 +311,12 @@
     }
    },
    "source": [
-    "Now, let load the trained model and start using out newly trained tokenizer"
+    "Now, let see how behave our newly trained tokenizer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {
     "pycharm": {
      "is_executing": false,
@@ -300,14 +328,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Encoded string: ['Ġthis', 'Ġis', 'Ġa', 'Ġsimple', 'Ġin', 'put', 'Ġto', 'Ġbe', 'Ġtoken', 'ized']\n",
+      "Encoded string: ['Ġthis', 'Ġis', 'Ġa', 'Ġsimple', 'Ġinput', 'Ġto', 'Ġbe', 'Ġto', 'ken', 'ized']\n",
       "Decoded string:  this is a simple input to be tokenized\n"
      ]
     }
    ],
    "source": [
     "# Let's tokenizer a simple input\n",
-    "tokenizer.model = BPE('vocab.json', 'merges.txt')\n",
     "encoding = tokenizer.encode(\"This is a simple input to be tokenized\")\n",
     "\n",
     "print(\"Encoded string: {}\".format(encoding.tokens))\n",
@@ -335,13 +362,66 @@
     "- type_ids: If your input was made of multiple \"parts\" such as (question, context), then this would be a vector with for each token the segment it belongs to.\n",
     "- overflowing: If your input has been truncated into multiple subparts because of a length limit (for BERT for example the sequence length is limited to 512), this will contain all the remaining overflowing parts."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Use your brand-new tokenizer into Transformers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import PreTrainedTokenizerFast\n",
+    "\n",
+    "tokenizer_fast = PreTrainedTokenizerFast(\n",
+    "    tokenizer_object=tokenizer_1,\n",
+    "    unk_token=\"<|endoftext|>\",\n",
+    "    bos_token=\"<|endoftext|>\",\n",
+    "    eos_token=\"<|endoftext|>\",\n",
+    "    add_prefix_space=False,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "and save it!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('brand-new-tokenizer/tokenizer_config.json',\n",
+       " 'brand-new-tokenizer/special_tokens_map.json',\n",
+       " 'brand-new-tokenizer/tokenizer.json')"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tokenizer_fast.save_pretrained('brand-new-tokenizer')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "transformers",
    "language": "python",
-   "name": "python3"
+   "name": "transformers"
   },
   "language_info": {
    "codemirror_mode": {
@@ -353,7 +433,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.8"
   },
   "pycharm": {
    "stem_cell": {
